# SmartStock

./: .gitignore  API_NOTES.md  CLAUDE.md  README.md  README_CN.md  package-lock.json
backend/: app.py  pyproject.toml
backend/cli/: main.py
backend/core/: portfolio.py  portfolio_db.py  scan_limit_up.py  stock_links.py
stock/: app.py  main.py  scan_limit_up.py  stock_info.py
web/: package-lock.json  package.json  vite.config.js
web/src/: App.vue
web/src/components/: LimitUpTable.vue  PortfolioSim.vue  StockLinks.vue
